IF(WIN32)
    CMAKE_MINIMUM_REQUIRED(VERSION 2.4.6 FATAL_ERROR)
ELSE(WIN32) 
    IF(APPLE)
        CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)
    ELSE(APPLE)
        CMAKE_MINIMUM_REQUIRED(VERSION 2.4.4 FATAL_ERROR)
    ENDIF(APPLE)
ENDIF(WIN32)

IF(COMMAND cmake_policy)
    CMAKE_POLICY(SET CMP0003 NEW)
ENDIF()

PROJECT(QSTLtest)

SET(QSTLTEST_INCLUDE ${PROJECT_SOURCE_DIR}/../include)
INCLUDE_DIRECTORIES(${QSTLTEST_INCLUDE})
MESSAGE(${QSTLTEST_INCLUDE})

SET(QALLOCSRC alloctest.cpp)

ADD_EXECUTABLE(alloctest ${QALLOCSRC})

SET(QALLOCSRC vectortest.cpp)

ADD_EXECUTABLE(vectortest ${QALLOCSRC})

SET(QLISTSRC listtest.cpp)

ADD_EXECUTABLE(listtest ${QLISTSRC})

INSTALL(TARGETS alloctest DESTINATION bin)
INSTALL(TARGETS vectortest DESTINATION bin)
INSTALL(TARGETS listtest DESTINATION bin)

